--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scrape",
   "version": "1.0.0",
-  "description": "read me.",
+  "description": "a very light scrape of a website",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/jodytate/scrape/issues"
   },
-  "homepage": "https://github.com/jodytate/scrape#readme"
+  "homepage": "https://github.com/jodytate/scrape#readme",
+  "dependencies": {
+    "minimist": "^1.2.0",
+    "node-notifier": "^4.5.0",
+    "winston": "^2.2.0",
+    "x-ray": "^2.3.0"
+  }
 }
